# noodle

./: .gitignore  CLAUDE.md  Cargo.toml  README.md
config/: config.example.json
docs/: module-api-v1.md
docs/plugins/chat/: README.md
docs/plugins/memory/: README.md
docs/plugins/scripting/: README.md
docs/plugins/todo/: README.md
docs/plugins/typos/: README.md
docs/plugins/utils/: README.md
modules/chat/: manifest.json  module.py
modules/memory/: manifest.json  module.py
modules/scripting/: manifest.json  module.py
modules/todo/: manifest.json  module.py
modules/typos/: manifest.json  module.py
modules/utils/: manifest.json  module.py
plugin/: noodle.plugin.zsh
scripts/: install.sh  test-e2e.sh  test-tools.sh  uninstall.sh
src/: actions.rs  context_builder.rs  engine.rs  executor.rs  interactive_shell.rs  main.rs  memory_commands.rs  permissions.rs  planner.rs  scripting.rs  tasks.rs  todo.rs  tooling.rs  utils.rs
tests/: e2e.rs
