[package]
name = "noodle"
version = "0.1.0"
edition = "2024"
description = "A macOS-first terminal companion for zsh with a local daemon, shared memory, and tool-driven chat."
readme = "README.md"
repository = "https://github.com/alexrudloff/noodle"
homepage = "https://github.com/alexrudloff/noodle"

[dependencies]
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = "0.32"
vt100 = "0.16"
portable-pty = "0.9"
